# libsignature-ed25519-dalek

./: .gitignore  .travis.yml  Cargo.toml  README.md
src/: lib.rs
