[package]
name = "libsignature-ed25519-dalek"
version = "0.1.0"
authors = ["Maxim Zakharov <5158255+Maxime2@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libcommon-rs = { git = "https://github.com/Fantom-foundation/libcommon-rs" }
libhash = { git = "https://github.com/Fantom-foundation/libhash" }
libsignature = { git = "https://github.com/Fantom-foundation/libsignature" }
serde = "1.0.80"
serde_derive = "1.0.80"

[dependencies.ed25519-dalek]
version = "1.0.0-pre.1"
features = ["serde"]
