[package]
name = "libsignature-ed25519-dalek"
version = "0.2.2"
authors = ["Maxim Zakharov <5158255+Maxime2@users.noreply.github.com>"]
edition = "2018"

[dependencies]
libcommon-rs = { git = "https://github.com/Fantom-foundation/libcommon-rs" }
libhash = { git = "https://github.com/Fantom-foundation/libhash" }
libsignature = { git = "https://github.com/Fantom-foundation/libsignature", version="0.2.0" }
serde = "1.0.101"
serde_derive = "1.0.101"
getrandom= "0.1.12"
rand_core = "=0.3.1"
log = "0.4.8"

[dependencies.ed25519-dalek]
version = "1.0.0-pre.2"
features = ["serde"]

[dev-dependencies]
libhash-sha3 = { git = "https://github.com/Fantom-foundation/libhash-sha3", version="0.1.1" }